syntax = "proto3";

package go.micro.srv.GetIndex;

service GetIndex {
	rpc CallGetIndex(Request) returns (Response) {}
}
message Message {
	string say = 1;
}

message Request {
}

message Response {
	string Error = 1;
	string ErrMsg=2;
	bytes IndexBytes=3;
}
